// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invalid.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
[
    ! should NOT format !
because: 
this is INVALID yaml
---

<html><head></head><body></body></html>

=====================================output=====================================
---
[
    ! should NOT format !
because: 
this is INVALID yaml
---

<html>
  <head></head>
  <body></body>
</html>

================================================================================
`;

exports[`yaml.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
hello:     world
---






<html><head></head><body></body></html>

=====================================output=====================================
---
hello: world
---

<html>
  <head></head>
  <body></body>
</html>

================================================================================
`;
